# binance-futures-rs

./: Cargo.toml  README.md  task-details.md
examples/: account_example.rs  advanced_trading_example.rs  algo_trading_example.rs  market_data.rs  trading_example.rs  websocket_example.rs
src/: error.rs  lib.rs  utils.rs
src/api/: account.rs  advanced_trading.rs  algo_trading.rs  market.rs  mod.rs  trading.rs
src/client/: auth.rs  http.rs  mod.rs
src/types/: account.rs  common.rs  market.rs  mod.rs  trading.rs
src/websocket/: mod.rs  stream.rs  types.rs  user_data.rs
