[package]
name = "binance-futures-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client library for Binance Futures API"
license = "MIT"
repository = "https://github.com/yourusername/binance-futures-rs"
keywords = ["binance", "futures", "trading", "cryptocurrency", "api"]
categories = ["api-bindings", "finance"]
documentation = "https://docs.rs/binance-futures-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
